# FreePIE

./: .gitattributes  .gitignore  .gitmodules  FreePIE.sln  FreePIE.vsmdi  README.md  index.html  params.json  rainbow-custom.min.js  samples.html
BuildTools/: License.rtf  Main.wxs  build_installer.bat  build_installer.xml  build_output.xml  createversion.bat  get_git_version.xml  msbuild.xml  write_VersionInfo.xml
FreePIE.Console/: ConsoleHost.cs  FreePIE.Console.csproj  Program.cs  packages.config
FreePIE.Console/Properties/: AssemblyInfo.cs
FreePIE.Core/: FreePIE.Core.csproj  packages.config
FreePIE.Core.Contracts/: Attributes.cs  Deprecated.cs  FreePIE.Core.Contracts.csproj  IGlobalNameProvider.cs  IHandleProvider.cs  IOPlugin.cs  IPlugin.cs  IPluginProperty.cs  IScriptContext.cs
FreePIE.Core.Contracts/Properties/: AssemblyInfo.cs
FreePIE.Core.Plugins/: AhrsImuPlugin.cs  AndroidPlugin.cs  ApplePlugin.cs  BeepPlugin.cs  ComDevicePlugin.cs  FreeImuPlugin.cs  FreePIE.Core.Plugins.csproj  FreePieIOPlugin.cs  FreeSpacePlugin.cs  FreeTrackPlugin.cs  GenericComPlugin.cs  GenericPlugin.cs  HydraPlugin.cs  JoystickFFBPlugin.cs  JoystickPlugin.cs  KeyboardPlugin.cs  MidiPlugin.cs  MouseKeyIO.cs  MousePlugin.cs  OculusPlugin.cs  PPJoyPlugin.cs  PSMovePlugin.cs  Plugin.cs  ScpPlugin.cs  SpeechPlugin.cs  TobiiEyeXPlugin.cs  TrackIRPlugin.cs  VJoyPlugin.cs  ViGemPlugin.cs  VuzixTrackerPlugin.cs  WiimotePlugin.cs  Window.cs  WindowPlugin.cs  XBox360Plugin.cs  Yei3SpacePlugin.cs  ZeissPlugin.cs  vJoyFFBPlugin.cs
FreePIE.Core.Plugins/Dx/: Device.cs
FreePIE.Core.Plugins/Extensions/: MathExtensions.cs
FreePIE.Core.Plugins/Globals/: GlobalIndexer.cs
FreePIE.Core.Plugins/Help/: FreePIE.Core.Plugins.AhrsImuPlugin.rtf  FreePIE.Core.Plugins.AndroidPlugin.rtf  FreePIE.Core.Plugins.FreeImuPlugin.rtf  FreePIE.Core.Plugins.HydraPlugin.rtf  FreePIE.Core.Plugins.PPJoyPlugin.rtf  FreePIE.Core.Plugins.VJoyPlugin.rtf
FreePIE.Core.Plugins/Hydra/: EmulatedData.cs  HydraSpoof.cs  Sixense.cs
FreePIE.Core.Plugins/MemoryMapping/: ArgumentExtension.cs  MappedMemory.cs  (+6 more)
FreePIE.GUI/: App.xaml  App.xaml.cs  FreePIE.GUI.csproj  packages.config  readme.txt
FreePIE.GUI.CodeCompletion/: BackspaceHideAction.cs  CompletionPopupView.xaml  CompletionPopupView.xaml.cs  CompletionPopupViewModel.cs  CustomKeyAction.cs  EditorAdapterBase.cs  EditorAdapterConverter.cs  EditorAdapterToRectValueConverter.cs  ElementChangedKeyAction.cs  FreePIE.GUI.CodeCompletion.csproj  ICompletionItem.cs  IPopupAction.cs  ItemClickedEvent.cs  KeyAction.cs  PopupOpenConverter.cs  SelectionChangedHideAction.cs  packages.config
FreePIE.Setup/: FreePIE.Setup.vdproj  FreePIE.Setup.wixproj  Product.wxs
FreePIE.Tests.Core/: CircularBufferTest.cs  FilterHelperTests.cs  FreePIE.Tests.Core.csproj  LuaEngineTest.cs  PluginInvokerTests.cs  RuntimeInfoTest.cs  ScriptParserTest.cs  ScriptParserTokenTest.cs
FreePIE.Tests.Core.Plugins/: FfbTests.cs  FreePIE.Tests.Core.Plugins.csproj  FreetrackPluginTest.cs  PPJoyPluginTest.cs  VRWalkStrategyTests.cs  packages.config
FreePIE.Tests.Test/: FreePIE.Tests.Test.csproj  TestBase.cs  packages.config
Lib/IO/: CMakeLists.txt  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat
Lib/IO/Binaries/: freepie_io.lib
Lib/IO/Binaries/Debug-DllMultiThreadRuntime/: freepie_io.lib
Lib/IO/Binaries/Debug-DllMultiThreadRuntime-x64/: freepie_io.lib  freepie_io_x64.lib
Lib/IO/Binaries/Release-DllMultiThreadRuntime/: freepie_io.lib
Lib/IO/Binaries/Release-DllMultiThreadRuntime-x64/: freepie_io.lib  freepie_io_x64.lib
Lib/IO/Code/: CMakeLists.txt
Lib/IO/Code/cfg/: freepie_io.def  freepie_io_x64.def
Lib/IO/Code/include/: freepie_io.h
Lib/IO/Code/src/: CMakeLists.txt  freepie_io_6dof.cpp
Lib/IO/Code/test/: CMakeLists.txt  main.c
javascripts/: analytics.js
stylesheets/: styles.css
(+438 files in other folders)
