cmake_minimum_required(VERSION 3.0)

set(FREEPIEIO_INCL_DIRS ${CMAKE_CURRENT_LIST_DIR}/../include/)
   
# Source files that are needed for the shared library
file(GLOB FREEPIEIO_SRC
    "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/*.h"
    "${CMAKE_CURRENT_LIST_DIR}/../cfg/*.def"
)

# shared library
add_library(freepie_io SHARED ${FREEPIEIO_SRC})
target_include_directories(freepie_io PUBLIC ${FREEPIEIO_INCL_DIRS} ${CMAKE_CURRENT_BINARY_DIR})

# Install
install(TARGETS freepie_io
    CONFIGURATIONS Debug
    RUNTIME DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH}
    LIBRARY DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH}
    ARCHIVE DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH})
install(TARGETS freepie_io
    CONFIGURATIONS Release
    RUNTIME DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH}
    LIBRARY DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH}
    ARCHIVE DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH})