#
# TEST FreePIE IO Library
#
add_executable(test main.c)
target_include_directories(test PUBLIC ${ROOT_DIR}/Code/include/)
target_link_libraries(test freepie_io)
SET_TARGET_PROPERTIES(test PROPERTIES FOLDER Test)

# Install
install(TARGETS test
    CONFIGURATIONS Debug
    RUNTIME DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH}
    LIBRARY DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH}
    ARCHIVE DESTINATION ${FREEPIE_DEBUG_INSTALL_PATH})
install(TARGETS test
    CONFIGURATIONS Release
    RUNTIME DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH}
    LIBRARY DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH}
    ARCHIVE DESTINATION ${FREEPIE_RELEASE_INSTALL_PATH})
